--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+		"start": "ng serve --host 127.0.0.1 --port 8080",
+		"start-prod": "ng serve --host 127.0.0.1 --port 8080 -prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
