--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start-prod": "ng serve --host 127.0.0.1 --port 8080 -prod",
 		"build": "ng build",
 		"build-prod": "ng build --output-path ~/games/HoshideCompany/static --prod --watch",
+		"build-unchi": "ng build --output-path C:/Users/tokab/Downloads/unchici --prod --watch",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
